tests/typing/bad/testfile-undef_var-2.s
	.text
	.globl main
main:
	ret
n:
	movq x, %rax
	ret
	.data
